<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/white"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="当前配置"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_min_face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_face_size"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tv_image_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_size"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tv_silent_live_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/silent_live_type"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tv_feature_threshold_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature_threshold_value"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tv_rgb_live_threshold_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rgb_live_threshold_value"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tv_nir_live_threshold_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nir_live_threshold_value"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tv_depth_live_threshold_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/depth_live_threshold_value"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/tv_detect_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detect_type"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="0dp"
        android:padding="10dp"
        android:text="确认"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/fillet_style_button_selector"/>
    <Button
        android:id="@+id/btn_modifier"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:padding="10dp"
        android:text="修改配置"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/fillet_style_return_selector"/>
</LinearLayout>