<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/layout_title"
        layout="@layout/layout_title" />

    <RelativeLayout
        android:id="@+id/ly_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ly_reigster"
        android:layout_below="@+id/layout_title"
        android:layout_marginTop="42dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/search_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:background="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="人脸搜索"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/search_linearLayout"
            android:layout_marginTop="12dp"
            android:text="@string/search_text"
            android:textColor="#016838"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ly_reigster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ly_search"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:id="@+id/reigster_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="人脸注册"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reigster_linearLayout"
            android:layout_marginTop="12dp"
            android:text="@string/reigster_text"
            android:textColor="#016838"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ly_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ly_reigster"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/user_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="人脸库管理"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_linearLayout"
            android:layout_marginTop="12dp"
            android:text="@string/user_text"
            android:textColor="#016838"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ly_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ly_user"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/import_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_gravity="center"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="批量导入"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/import_linearLayout"
            android:layout_marginTop="12dp"
            android:text="@string/import_text"
            android:textColor="#016838"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:src="@mipmap/ic_baidu_logo" />
</RelativeLayout>